--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+.env
+.vscode
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
